SONAR-18628 Drop GlobalPermissions class and replace with GlobalPermission enum.